tests/NormalTests/paczka1/fuzzy1/17898797.err
Error in line 19: 4A5T S294 23,1
Error in line 16: gfF5 S84 15,6
Error in line 24: gfF5 S294 98,1
Error in line 23: 4cJ4w2jg1 A713 10,8
Error in line 31: 4cJ4w2jg1 S84 71z1
